--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
   "author": "Desmond Lobo, Mansi Borole",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1368.0",
+    "dash-player": "^0.2.11",
+    "dashjs": "^4.6.0",
     "express": "^4.18.2"
   }
 }
