--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1368.0",
+    "cors": "^2.8.5",
     "dash-player": "^0.2.11",
     "dashjs": "^4.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
   }
 }
