--- a/client2/package.json
+++ b/client2/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-video-js-player": "^1.1.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
