--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dash-player": "^0.2.11",
     "dashjs": "^4.6.0",
     "express": "^4.18.2",
+    "mongoose": "^7.1.0",
     "socket.io": "^4.6.1"
   }
 }
