--- a/analysis_server/package.json
+++ b/analysis_server/package.json
@@ -4,8 +4,9 @@
   "description": "Server to perform analysis of metrics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start-pc": "node index.js"  },
   "author": "Desmond Lobo, Mansi Borole",
   "license": "ISC",
   "dependencies": {
