--- a/client_CDN-dash/package.json
+++ b/client_CDN-dash/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "PORT=3003 react-scripts start",
     "start-pc": "set PORT=3003&& react-scripts start",
-    "build": "react-scripts build",
+    //"build": "react-scripts build",
+    "build": "npm install",
     
     "test": "react-scripts test",
     "eject": "react-scripts eject"
